--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "eslint": "8.28.0",
     "eslint-config-next": "13.0.5",
     "gl-matrix": "^3.4.3",
-    "next": "13.0.5",
+    "next": "^13.0.5",
     "pcg32": "^1.0.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
