Add latex, improve texts

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "pcg32": "^1.0.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-latex-next": "^2.2.0",
     "typescript": "4.9.3"
   }
 }
